--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,13 @@
             <systemPath>${project.basedir}/libs/AquaCoreAPI.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>dev.phoenix.phoenix</groupId>
+            <artifactId>PhoenixAPI</artifactId>
+            <version>dev-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/Phoenix-API.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>net.audidevelopment.core.api</groupId>
             <artifactId>cCoreAPI</artifactId>
             <version>dev-SNAPSHOT</version>
